--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,9 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">@color/sexy_pink</item>
-        <item name="colorPrimaryDark">@color/sexy_pink_dark</item>
-        <item name="android:colorAccent" tools:ignore="NewApi">@color/sexy_pink</item>
-        <item name="android:textColorPrimary">@color/dark_grey</item>
-        <item name="android:windowBackground">@color/white</item>
-        <item name="android:navigationBarColor" tools:ignore="NewApi">@color/black</item>
-        <item name="android:windowActionBar">true</item>
-        <item name="android:windowContentTransitions" tools:ignore="NewApi">true</item>
+        <item name="colorPrimary">@color/light_grey</item>
+        <item name="colorPrimaryDark">@color/white</item>
+        <item name="colorAccent">@color/sexy_pink</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -19,8 +14,8 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
-        <item name="tabIndicatorColor">@color/sexy_pink</item>
-        <item name="android:textColorPrimary">@color/black</item>
+        <item name="tabIndicatorColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/grey</item>
         <item name="tabIndicatorHeight">1dp</item>
         <item name="tabPaddingStart">12dp</item>
         <item name="tabPaddingEnd">12dp</item>
