--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -77,13 +77,13 @@ event description: event_detail_description
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/medium_padding"
+                android:paddingBottom="@dimen/medium_padding"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/medium_padding"
-                    android:paddingBottom="@dimen/medium_padding">
+                    android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="1"
@@ -110,14 +110,18 @@ event description: event_detail_description
                             android:textColor="@color/grey"
                             android:text="Good Coffee"/>
                     </LinearLayout>
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/event_detail_location"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
+                        android:layout_gravity="left"
+                        android:gravity="left"
 
                         android:text="Mountain View"
                         android:textColor="@color/grey"
