--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="sexy_pink_light">#ff80bd</color>
     <color name="sexy_pink_dark">#b30048</color>
     <color name="light_grey">#EEEEEE</color>
+    <color name="grey_extra_light">#EEEEEE</color>
 
     <color name="transparent">#00FFFFFF</color>
     <color name="dark_grey">#222222</color>
