--- a/app/src/main/res/layout/upcoming_event.xml
+++ b/app/src/main/res/layout/upcoming_event.xml
@@ -14,29 +14,25 @@ event list: event_list
     tools:context=".MainPage"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/event_create"
-        android:layout_gravity="center"
-        android:padding="@dimen/small_padding"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/app_top_button_height"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:src="@drawable/create"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/small_padding"
-            android:gravity="center"
-            android:text="Create"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            android:textColor="@color/grey"/>
-    </LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:id="@+id/event_create"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:padding="@dimen/small_padding"-->
+        <!--android:gravity="center"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="@dimen/app_top_button_height"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginLeft="@dimen/small_padding"-->
+            <!--android:gravity="center"-->
+            <!--android:text="Create"-->
+            <!--android:textSize="@dimen/button_text_size"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textColor="@color/grey"/>-->
+    <!--</LinearLayout>-->
 
     <View
         android:layout_marginTop="@dimen/medium_padding"
