--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -27,6 +27,7 @@ event description: event_detail_description
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -55,6 +56,7 @@ event description: event_detail_description
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:fitsSystemWindows="true"
                 app:layout_scrollFlags="scroll|enterAlways"></android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
