--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -9,7 +9,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include layout="@layout/app_bar_mainpage"
+    <include layout="@layout/content_mainpage"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
