--- a/app/src/main/res/layout/content_mainpage.xml
+++ b/app/src/main/res/layout/content_mainpage.xml
@@ -8,6 +8,8 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <include layout="@layout/toolbar"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
@@ -23,7 +25,7 @@
         android:layout_gravity="center_horizontal"
         android:background="@color/grey_extra_light"
         android:textAlignment="center"
-        android:clickable="true"
+        android:onClick="tabClick"
         app:tabGravity="fill"
         app:tabMode="fixed"
         style="@style/MyCustomTabLayout"
