1.new publish button 2.remove status bar

--- a/app/src/main/res/layout/content_mainpage.xml
+++ b/app/src/main/res/layout/content_mainpage.xml
@@ -24,10 +24,10 @@
         android:paddingBottom="@dimen/small_padding"
         android:layout_gravity="center_horizontal"
         android:background="@color/grey_extra_light"
+        app:tabBackground="@color/transparent"
         android:textAlignment="center"
         android:onClick="tabClick"
         app:tabGravity="fill"
         app:tabMode="fixed"
-        style="@style/MyCustomTabLayout"
-        />
+        style="@style/MyCustomTabLayout" />
 </LinearLayout>
