--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,18 +8,20 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:elevation="4dp"
-        android:alpha="0.5"
+        android:background="@color/transparent"
+        android:navigationIcon="@drawable/profile"
         android:theme="@style/AppTheme"
         app:popupTheme="@style/AppTheme">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Toolbar Title"
+            android:text="Toolbar-Title"
             android:textAllCaps="true"
             android:textStyle="bold"
             android:textSize="@dimen/medium_text_size"
-            android:textColor="@color/sexy_pink"
+            android:textColor="@color/black"
+            android:background="@color/transparent"
             android:layout_gravity="center"
-            android:id="@+id/toolbar_title" />
+            android:id="@+id/toolbar_title"/>
     </android.support.v7.widget.Toolbar>
 </android.support.design.widget.AppBarLayout>
