--- a/app/src/main/res/layout/app_bar_profile.xml
+++ b/app/src/main/res/layout/app_bar_profile.xml
@@ -6,21 +6,7 @@
     android:layout_height="match_parent" android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:elevation="4dp"
-            android:theme="@style/AppTheme"
-            app:popupTheme="@style/AppTheme"/>
-
-    </android.support.design.widget.AppBarLayout>
-
+    <include layout="@layout/toolbar"/>
 
     <LinearLayout
         android:orientation="vertical"
