1.high resolution icon 2.fix context color 3.tab layout title

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ImageView android:src="@drawable/event_detail_head_image"
+        <ImageView android:src="@drawable/logo_white"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:text="No account yet? Create one"
-            android:textColor="@color/grey"
+            android:textColor="@color/grey_extra_light"
             android:gravity="center"
             android:textSize="16dip"/>
 
