--- a/app/src/main/res/layout/custom_tab.xml
+++ b/app/src/main/res/layout/custom_tab.xml
@@ -8,9 +8,9 @@
 
     <!--<ImageView-->
         <!--android:id="@+id/imgView"-->
-        <!--android:src="@drawable/search"-->
         <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content" />-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
     <TextView
         android:id="@+id/textView"
         android:text="explore"
