--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,7 +9,7 @@
         android:layout_height="?attr/actionBarSize"
         android:elevation="4dp"
         android:background="@color/transparent"
-        android:navigationIcon="@drawable/profile"
+        android:navigationIcon="@drawable/profile_pink"
         android:theme="@style/AppTheme"
         app:popupTheme="@style/AppTheme">
         <TextView
