--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,9 +16,9 @@
 
     <color name="grey">#999999</color>
     <color name="grey_4">#444444</color>
-    <color name="sexy_pink">#E0006C</color>
+    <color name="sexy_pink">#ff2d55</color>
     <color name="sexy_pink_light">#ff80bd</color>
-    <color name="sexy_pink_dark">#b30048</color>
+    <color name="sexy_pink_dark">#c82756</color>
     <color name="light_grey">#EEEEEE</color>
     <color name="grey_extra_light">#EEEEEE</color>
 
